<resources>
    <string name="app_name">Focus Timey</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="focus">Focus</string>
    <string name="timeLine">TimeLine</string>
    <string name="store">Store</string>
    <string name="setting">Setting</string>
    <string name="coin">coin</string>
    <string name="acknowledge">OK</string>
    <string name="start_hint">Time to focusing! ヾ(Ő∀Ő๑)ﾉ</string>
    <string name="progress_hint">put down your phone! (ง •̀_•́)ง̑̑</string>
    <string name="equip">Equip</string>
    <string name="unload">Unload</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="permission_dialog">In order to run this application, please turn on the permission in Settings</string>
    <string name="choose_theme">choose your theme</string>

    <!-- Register -->
    <string name="account">account</string>
    <string name="please_input_your_account">&#32;please input account</string>
    <string name="login">Login</string>
    <string name="forget_password">forget password</string>
    <string name="password">password</string>
    <string name="please_input_password">&#32;please input password</string>
    <string name="go_to_register">go to register</string>
    <string name="third_method_login"> third method login</string>
    <string name="if_login_is_meaning_to_agree">by signing up you agree to&#160;</string>
    <string name="the_service">&#32;our terms data policy</string>
    <string name="iv_project_icon">iv_project_icon</string>
    <string name="tv_register">user register</string>
    <string name="tv_phone">phone</string>
    <string name="et_phone">please input phone</string>
    <string name="bt_get_code">get code</string>
    <string name="tv_code">code</string>
    <string name="et_code">please input code</string>
    <string name="tv_name">name</string>
    <string name="et_name">please input name</string>
    <string name="tv_gender">email</string>
    <string name="et_gender">please input email</string>
    <string name="tv_age">age</string>
    <string name="et_age">please input age</string>
    <string name="tv_password">password</string>
    <string name="et_password">please input password</string>
    <string name="et_password2">please input password again</string>
    <string name="bt_register">submit</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>

    <!-- forget password -->
    <string name="tv_forget">forget password</string>
    <string name="tv_email">Email</string>
    <string name="et_email">Please input your registered email</string>
    <string name="bt_send_email">Send Email</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Setting change -->
    <string name="bt_change_email">Change Email</string>
    <string name="bt_change_password">Change Password</string>
    <string name="tv_change_email">Change Email</string>
    <string name="tv_change_password">Change Password</string>
    <string name="et_email_old">Please input your email</string>
    <string name="et_email_new">Please input your new email</string>
    <string name="et_email_new2">Please input your new email again</string>
    <string name="et_password_old">Please input your password</string>
    <string name="et_password_new">Please input your new password</string>
    <string name="et_password_new2">Please input your new password again</string>
    <string name="bt_logout">Logout</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="question">Q&amp;A</string>
    <string name="rate">Rate us</string>
    <string name="privacy">Privacy</string>
    <string name="sync">sync</string>
    <string name="mario">mario</string>
    <string name="M2000">$2000</string>
    <string name="kabi">kabi</string>
    <string name="koala">koala</string>
    <string name="wukong">wukong</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="base">Base</string>
</resources>