<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_focus"
            android:icon="@drawable/item_focus"
            android:title="@string/focus" />
        <item
            android:id="@+id/nav_timeLine"
            android:icon="@drawable/item_timeline"
            android:title="@string/timeLine" />
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/item_store"
            android:title="@string/store" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/item_setting"
            android:title="@string/setting" />
    </group>
</menu>