<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_password_old"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="15"
        android:hint="@string/et_password_old"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/et_password_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="15"
        android:hint="@string/et_password_new"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/et_password_new2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="15"
        android:hint="@string/et_password_new2"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        tools:targetApi="o" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/cancel_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/login_button"
            android:text="@string/cancel" />
        <TextView
            android:id="@+id/bt_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/login_button"
            android:text="@string/bt_change_password" />

    </LinearLayout>
</LinearLayout>