<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.ForgetPasswordActivity">

    <data />

    <ScrollView
        android:id="@+id/sc_global"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/tv_forget"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/tv_email" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_middle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:autofillHints=""
                    android:ems="15"
                    android:hint="@string/et_email"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:minHeight="48dp"
                    android:singleLine="true"
                    tools:targetApi="o" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/bt_send_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/login_button"
                    android:text="@string/bt_send_email" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</layout>